--- a/styles/global.css
+++ b/styles/global.css
@@ -24,9 +24,29 @@
   }
 }
 
+@layer components {
+  .underline-link {
+    @apply link link-underline;
+  }
+}
+
 body {
   padding: 0;
   margin: 0;
   font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+.link-underline {
+		border-bottom-width: 0;
+		background-image: linear-gradient(transparent, transparent), linear-gradient(#000, #000);
+		background-size: 0 2px;
+		background-position: 0 100%;
+		background-repeat: no-repeat;
+		transition: background-size .3s ease-in-out;
+	}
+
+	.link-underline:hover {
+		background-size: 100% 2px;
+		background-position: 0 100%
+	}
