--- a/styles/global.css
+++ b/styles/global.css
@@ -24,19 +24,28 @@
   }
 }
 
+@layer base {
+  section {
+    @apply container;
+  }
+}
+
 @layer components {
+  .container {
+    @apply flex flex-row items-center justify-between px-3 py-4 m-auto;
+  }
   .underline-link {
     @apply link link-underline;
   }
   /* For Product Card */
   .card-container {
-    @apply flex flex-col h-max w-64 pb-4 rounded-lg relative hover:bottom-1;
+    @apply flex flex-col h-max w-64 pb-4 rounded-lg relative transition duration-300 hover:-translate-y-2;
   }
   .card-image-container {
-    @apply flex items-center cursor-pointer justify-center h-80 mb-2 py-4 px-1 transition duration-200 ease-in bg-white shadow-lg relative rounded-lg border-2 border-transparent hover:border-indigo-600;
+    @apply flex items-center cursor-pointer justify-center h-80 mb-2 py-4 px-1 transition duration-300 ease-in bg-white shadow-lg relative rounded-lg border-2 border-transparent hover:border-indigo-600;
   }
   .add-to-cart {
-    @apply absolute flex p-2 top-5 right-5 cursor-pointer border-2 rounded-lg leading-none transition duration-200 ease-in hover:border-indigo-600 hover:bg-indigo-600;
+    @apply absolute flex p-2 top-5 right-5 cursor-pointer border-2 rounded-lg leading-none transition duration-100 ease-in hover:border-indigo-600 hover:bg-indigo-600;
   }
 }
 
@@ -50,7 +59,9 @@ body {
 }
 
 .link-underline {
-  linear-gradient(#4f46e5, #4f46e5);
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#4f46e5, #4f46e5);
   background-size: 0 2px;
   background-position: 0 100%;
   background-repeat: no-repeat;
